Add content to project page

--- a/src/index.html
+++ b/src/index.html
@@ -24,5 +24,9 @@
   </head>
   <body class="mat-typography">
     <app-root></app-root>
+    <script
+      src="https://kit.fontawesome.com/0e6a7ceb8d.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
